Project

General

Profile

Actions

Bug #11995

closed

format: efi usable size is missing 1 sector

Added by Toomas Soome over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
cmd - userland programs
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

off by 1 error in format. reserver partition last sector does not match with last usable sector.

This error is present with WILD_STRING, but also with hog slice size calculation.

Testing done: used format->partition modify command and compared with GPT header information.

Actions #1

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #2

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #3

Updated by Electric Monk over 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit d30992fa3989ef47543839be59b8c86165285ec4

commit  d30992fa3989ef47543839be59b8c86165285ec4
Author: Toomas Soome <tsoome@me.com>
Date:   2019-11-26T15:06:58.000Z

    11995 format: efi usable size is missing 1 sector
    Reviewed by: Robert Mustacchi <rm@fingolfin.org>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF